--- a/ConsoleDBConnection.csproj
+++ b/ConsoleDBConnection.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Log4Net.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="ExecutingQueries.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\ConfData.Designer.cs">
       <AutoGen>True</AutoGen>
